[gd_scene load_steps=2 format=2]

[ext_resource path="res://projectiles/Projectile.gd" type="Script" id=1]

[node name="Projectile" type="Area2D"]
collision_layer = 8
collision_mask = 7
script = ExtResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
rect = Rect2( -16, -16, 32, 32 )

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="MaxLifespanTimer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true
autostart = true
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_DespawnTimer_timeout"]
[connection signal="timeout" from="MaxLifespanTimer" to="." method="_on_MaxLifespanTimer_timeout"]
